fluxcd/apps/overlays/production/tacticalrmm/deployment-backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tactical-backend
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/cap.postgres: "true"
        policy.prplanit.com/access-scope-postgres: hookshot.tacticalrmm.postgres
        policy.prplanit.com/cap.redis: "true"
        policy.prplanit.com/access-scope-redis: hookshot.tacticalrmm.redis
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: backend
          image: docker.io/tacticalrmm/tactical:1.5.2
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: "115m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - $patch: replace
        - name: tmp
          emptyDir: {}
        - name: tactical-data
          persistentVolumeClaim:
            claimName: hookshot-tactical-data-pvc
        - name: meshcentral-data
          persistentVolumeClaim:
            claimName: hookshot-meshcentral-data-pvc
        - name: mongo-data
          persistentVolumeClaim:
            claimName: hookshot-mongo-init-pvc
        - name: redis-data
          persistentVolumeClaim:
            claimName: hookshot-redis-init-pvc
        - name: init-wrapper
          configMap:
            name: tactical-init-wrapper
            defaultMode: 0755
