fluxcd/apps/overlays/production/tacticalrmm/deployment-celery-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tactical-celery
spec:
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: celery
          image: docker.io/tacticalrmm/tactical:1.5.2
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - $patch: replace
        - name: tmp
          emptyDir: {}
        - name: tactical-data
          persistentVolumeClaim:
            claimName: hookshot-tactical-data-pvc
