fluxcd/apps/overlays/production/tacticalrmm/deployment-celerybeat-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tactical-celerybeat
spec:
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: celerybeat
          image: docker.io/tacticalrmm/tactical:1.5.2
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - $patch: replace
        - name: tactical-data
          persistentVolumeClaim:
            claimName: hookshot-tactical-data-pvc
