fluxcd/apps/overlays/production/tacticalrmm/deployment-init-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tactical-init
spec:
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      - name: docker-io-pull-secret
      containers:
      - name: init
        image: docker.jcr.pcfae.com/tacticalrmm/tactical:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
