fluxcd/apps/overlays/production/tacticalrmm/deployment-nats-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tactical-nats
spec:
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: nats
          image: docker.io/tacticalrmm/tactical-nats:1.5.2
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - $patch: replace
        - name: tmp
          emptyDir: {}
        - name: tactical-data
          persistentVolumeClaim:
            claimName: hookshot-tactical-data-pvc
