fluxcd/apps/overlays/production/tacticalrmm/statefulset-mongodb-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tactical-mongodb
spec:
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mongodb
          image: docker.io/mongo:4.4
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: "75m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: mongo-init
          persistentVolumeClaim:
            claimName: hookshot-mongo-init-pvc
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 10Gi
