fluxcd/apps/overlays/production/tacticalrmm/statefulset-postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tactical-postgres
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: postgres
        policy.prplanit.com/service-scope: hookshot.tacticalrmm.postgres
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: docker.io/postgres:15-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: postgres-run
              mountPath: /var/run/postgresql
            - name: postgres-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "30m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: postgres-run
          emptyDir: {}
        - name: postgres-tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 10Gi
