fluxcd/apps/overlays/production/tacticalrmm/statefulset-tactical-app-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tactical-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: docker-io-pull-secret
      containers:
        - name: tactical-init
          image: docker.io/tacticalrmm/tactical:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
        - name: meshcentral
          image: docker.io/tacticalrmm/tactical-meshcentral:latest
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
        - name: nats
          image: docker.io/tacticalrmm/tactical-nats:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: backend
          image: docker.io/tacticalrmm/tactical:latest
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
        - name: websockets
          image: docker.io/tacticalrmm/tactical:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: celery
          image: docker.io/tacticalrmm/tactical:latest
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
        - name: celerybeat
          image: docker.io/tacticalrmm/tactical:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: frontend
          image: docker.io/tacticalrmm/tactical-frontend:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: nginx
          image: docker.io/tacticalrmm/tactical-nginx:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - $patch: replace
        - name: hookshot-tactical-data
          persistentVolumeClaim:
            claimName: hookshot-tactical-data-pvc
        - name: hookshot-meshcentral-data
          persistentVolumeClaim:
            claimName: hookshot-meshcentral-data-pvc
        - name: hookshot-tactical-certs
          secret:
            secretName: hookshot-tactical-tls
