fluxcd/apps/overlays/production/tacticalrmm/statefulset-tactical-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tactical
spec:
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      - name: docker-io-pull-secret
      containers:
      - name: meshcentral
        image: docker.jcr.pcfae.com/tacticalrmm/tactical-meshcentral:latest
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
      - name: nats
        image: docker.jcr.pcfae.com/nats:2.10.22-alpine
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      - name: backend
        image: docker.jcr.pcfae.com/tacticalrmm/tactical:latest
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
      - name: websockets
        image: docker.jcr.pcfae.com/tacticalrmm/tactical:latest
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      - name: celery
        image: docker.jcr.pcfae.com/tacticalrmm/tactical:latest
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
      - name: celerybeat
        image: docker.jcr.pcfae.com/tacticalrmm/tactical:latest
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      - name: frontend
        image: docker.jcr.pcfae.com/tacticalrmm/tactical-frontend:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      - name: nginx
        image: docker.jcr.pcfae.com/tacticalrmm/tactical-nginx:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
  volumeClaimTemplates:
  - metadata:
      name: tactical-data
    spec:
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: meshcentral-data
    spec:
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 5Gi
