fluxcd/apps/overlays/production/tacticalrmm/service-tactical-nginx-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: tactical-nginx
  labels:
    policy.prplanit.com/ingress: "true"
