fluxcd/apps/overlays/production/tacticalrmm/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tactical-nginx
spec:
  exportTo:
    - "."
    - "istio-system"
  host: tactical-nginx.hookshot.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
          sni: trmm.prplanit.com
