fluxcd/apps/overlays/production/tacticalrmm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tacticalrmm-trmm
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Remote Access (Hookshot🪝)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
      sectionName: https-prplanit
  hostnames:
    - "trmm.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tactical-nginx
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tacticalrmm-api
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Remote Access (Hookshot🪝)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
      sectionName: https-prplanit
  hostnames:
    - "trmm-api.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tactical-nginx
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tacticalrmm-mesh
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Remote Access (Hookshot🪝)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
      sectionName: https-prplanit
  hostnames:
    - "meshc.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tactical-nginx
          port: 80
